<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/welcome_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/search_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/subtitle_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/subtitle"
            app:layout_constraintEnd_toEndOf="@+id/welcome_tv"
            app:layout_constraintStart_toStartOf="@+id/welcome_tv"
            app:layout_constraintTop_toBottomOf="@+id/welcome_tv" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/search_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/black"
            android:src="@drawable/ic_search"
            android:layout_marginEnd="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/subtitle_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/welcome_tv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/now_playing_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/subtitle_tv" />

        <TextView
            android:id="@+id/popular_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popular"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="32dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/now_playing_rv" />

        <TextView
            android:id="@+id/see_all_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/see_all"
            android:textSize="18sp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/popular_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/popular_tv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="12dp"
            android:nestedScrollingEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/popular_tv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>